# k8smcp

./: Dockerfile  Dockerfile.backend  GUI_DESIGN.md  LICENSE  README.md  artifact_manager.py  claude_analyzer.py  claudeconfig.json  command_router.py  database.py  docker-compose.yml  dvc_manager.py  inference_manager.py  k8s_debugger.py  kubernetes_deployment.yaml  llm_trainer.py  main.py  mcp_server_wrapper.py  migrate_data.py  mlops_workflow.py  model_definitions.py  model_registry.py  package-lock.json  pyproject.toml  requirements.txt  server.py  storage_backends.py  workflow_orchestrator.py
frontend/: Dockerfile.frontend  next.config.mjs
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: mlops-dashboard.tsx
frontend/components/dashboard/: chatbot-interface.tsx  dashboard-overview.tsx  kubernetes-yaml-uploader.tsx  model-inference.tsx  model-registry.tsx  monitoring-dashboard.tsx  settings-panel.tsx  welcome-screen.tsx  workflow-management.tsx
mlops_jobs/mlops_jobs/mlops-1755089224/: Dockerfile.infer  Dockerfile.train  inference.py  train.py
