[project]
name = "kubernetes-mcp-debugger"
version = "0.1.0"
description = "A comprehensive debugging tool for Kubernetes clusters with Claude AI integration"
authors = [
    {name = "Dani Atalla", email = "Daneyataal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastmcp>=2.0.0",
    "kubernetes>=18.0.0",
    "anthropic>=0.8.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8.2",
    "requests>=2.28.0",
    "uvicorn>=0.24.0",
]

[project.scripts]
k8s-mcp = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mcpk8s"]
